# salad

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  index.json  info.json  pyproject.toml  regressions.xml  requirements.txt
.github/workflows/: smoke-test.yml  testing-and-coverage.yml
_results/gh-runner/: 12052162-virtualenv-py3.11-Cython-build-packaging.json  6f6f2636-virtualenv-py3.11-Cython-build-packaging.json  7448d008-virtualenv-py3.11-Cython-build-packaging.json  994b4f98-virtualenv-py3.11-Cython-build-packaging.json  (+5 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst
notebooks/: 233.pkl  233_2.pkl  Astrofest.ipynb  Candidates.ipynb  Cluster 21.ipynb  Completeness 2.ipynb  Completeness 3.ipynb  Completeness SNR~3.ipynb  Completeness corrected apparent magnitude distribution.ipynb  Completeness vs Number of Detections.ipynb  Completeness vs SNR.ipynb  Completeness.ipynb  Detection Catalog.ipynb  Detection.ipynb  Did Find.ipynb  Directions.ipynb  Fake Line Recovery.ipynb  Fake Mysteries.ipynb  Fake masks.ipynb  Fake mysteries 2.ipynb  Fakes.ipynb  False Positives.ipynb  Filter Detections.ipynb  Gathered.ipynb  Inspect Search.ipynb  Into the noise.ipynb  KBMOD results.ipynb  KBMOD vs SALAD fake recovery comparison.ipynb  Light curves.ipynb  Likelihood.ipynb  M Dwarf Flare.ipynb  Magnitude Distribution 2.ipynb  Magnitude Distribution.ipynb  Magnitudes.ipynb  New Search.ipynb  Occultation.ipynb  Photometry example.ipynb  Purity.ipynb  Re-work.ipynb  Recover Fakes.ipynb  (+22 more)
src/: .pylintrc
src/salad/: cli.py  (+25 more)
tests/: .pylintrc
(+55 files in other folders)
